2005-06-09  Chris Toshok  <toshok@ximian.com>
	* frontend/Makefile.am, arch/Makefile.am, interfaces/Makefile.am,
	test/Makefile.am, wrapper/Makefile.am, jay/Makefile.am,
	classes/Makefile.am, Makefile.am, backends/server/Makefile.am,
	backends/mono/Makefile.am: make dist work.


svn path=/trunk/debugger/; revision=45717

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 SUBDIRS = jay interfaces classes glue arch backends frontend wrapper test
 
+DIST_SUBDIRS= doc $(SUBDIRS)
+
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = mono-debugger.pc
 
