--- a/backends/mono/Makefile.am
+++ b/backends/mono/Makefile.am
@@ -1,6 +1,8 @@
-EXTRA_DIST = CSharpMethod.cs Heap.cs MonoArrayObject.cs MonoArrayType.cs MonoClass.cs MonoClassObject.cs \
-	MonoCSharpLanguageBackend.cs MonoEnumObject.cs MonoEnumType.cs MonoFunctionObject.cs \
-	MonoFunctionType.cs MonoFundamentalObjectBase.cs MonoFundamentalObject.cs MonoFundamentalType.cs \
-	MonoObject.cs MonoObjectObject.cs MonoObjectType.cs MonoOpaqueObject.cs MonoOpaqueType.cs \
-	MonoPointerObject.cs MonoPointerType.cs MonoStringObject.cs MonoStringType.cs MonoType.cs \
-	MonoVariable.cs
+EXTRA_DIST =  \
+	Heap.cs MonoFunctionObject.cs MonoLanguageBackend.cs MonoStringType.cs \
+	MonoArrayObject.cs MonoFunctionType.cs MonoObject.cs MonoStringTypeInfo.cs \
+	MonoArrayType.cs MonoFunctionTypeInfo.cs MonoObjectObject.cs MonoSymbolFile.cs \
+	MonoArrayTypeInfo.cs MonoFundamentalObjectBase.cs MonoObjectType.cs MonoType.cs \
+	MonoClassInfo.cs MonoFundamentalObject.cs MonoObjectTypeInfo.cs MonoTypeInfo.cs \
+	MonoClassObject.cs MonoFundamentalType.cs MonoOpaqueType.cs MonoVariable.cs \
+	MonoClassType.cs MonoFundamentalTypeInfo.cs MonoStringObject.cs
