--- a/classes/Makefile.am
+++ b/classes/Makefile.am
@@ -1,8 +1,13 @@
-EXTRA_DIST = AbsoluteTargetLocation.cs AddressDomain.cs AssemblerMethod.cs Backtrace.cs Breakpoint.cs \
-	BreakpointHandle.cs InternalError.cs MethodBase.cs MethodSource.cs Module.cs ModuleManager.cs \
-	ObjectCache.cs ObjectContainer.cs ProcessStart.cs RelativeTargetLocation.cs Report.cs \
-	SimpleBreakpoint.cs SimpleSymbolTableCollection.cs SourceAddress.cs SourceBuffer.cs SourceFileFactory.cs \
-	SourceInfo.cs SourceLocation.cs StackFrame.cs SymbolTableCollection.cs SymbolTable.cs SymbolTableException.cs \
-	SymbolTableManager.cs TargetAddress.cs TargetBinaryReader.cs TargetBinaryWriter.cs TargetEvent.cs \
-	TargetException.cs TargetInvocationException.cs TargetLocation.cs TargetMemoryArea.cs TargetMemoryException.cs \
-	ThreadGroup.cs
+EXTRA_DIST =  \
+	AbsoluteTargetLocation.cs Module.cs SourceBuffer.cs TargetBinaryReader.cs \
+	AddressDomain.cs ModuleManager.cs SourceFileFactory.cs TargetBinaryWriter.cs \
+	AssemblerMethod.cs ObjectCache.cs SourceInfo.cs TargetEvent.cs \
+	Backtrace.cs ObjectContainer.cs SourceLocation.cs TargetException.cs\
+	Breakpoint.cs StackFrame.cs TargetInvocationException.cs \
+	BreakpointHandle.cs ProcessStart.cs SymbolTableCollection.cs TargetLocation.cs \
+	CatchpointHandle.cs RelativeTargetLocation.cs SymbolTable.cs TargetMemoryArea.cs \
+	ExceptionCatchPoint.cs Report.cs SymbolTableException.cs TargetMemoryException.cs \
+	InternalError.cs SimpleBreakpoint.cs SymbolTableManager.cs ThreadGroup.cs \
+	MethodBase.cs SimpleSymbolTableCollection.cs TargetAddress.cs Threading.cs \
+	MethodSource.cs SourceAddress.cs TargetBinaryAccess.cs
+
