--- a/interfaces/Makefile.am
+++ b/interfaces/Makefile.am
@@ -1,6 +1,7 @@
-EXTRA_DIST = IArchitecture.cs IDisassembler.cs ILanguage.cs IMethod.cs ISourceBuffer.cs ISymbolFile.cs ISymbolTable.cs \
-	ITargetArrayObject.cs ITargetArrayType.cs ITargetClassObject.cs ITargetClassType.cs ITargetFunctionObject.cs \
-	ITargetFunctionType.cs ITargetFundamentalObject.cs ITargetFundamentalType.cs ITargetMemoryAccess.cs \
-	ITargetNotification.cs ITargetObject.cs ITargetPointerObject.cs ITargetPointerType.cs ITargetStructObject.cs \
-	ITargetStructType.cs ITargetType.cs IVariable.cs TargetObjectKind.cs ITargetTypeAlias.cs
+EXTRA_DIST = IArchitecture.cs IDisassembler.cs IEventHandle.cs ILanguage.cs IMethod.cs ISourceBuffer.cs ISymbolFile.cs \
+	ISymbolTable.cs ITargetArrayObject.cs ITargetArrayType.cs ITargetClassObject.cs ITargetClassType.cs \
+	ITargetFunctionObject.cs ITargetFunctionType.cs ITargetFundamentalObject.cs ITargetFundamentalType.cs \
+	ITargetMemoryAccess.cs ITargetNotification.cs ITargetObject.cs ITargetPointerObject.cs ITargetPointerType.cs \
+	ITargetStructObject.cs ITargetStructType.cs ITargetType.cs ITargetTypeInfo.cs IVariable.cs TargetObjectKind.cs \
+	ITargetTypeAlias.cs
 
