add files to CLEANFILES to fix distcheck
svn path=/trunk/debugger/; revision=45919

--- a/frontend/Makefile.am
+++ b/frontend/Makefile.am
@@ -6,7 +6,7 @@ CSLEX = $(top_builddir)/cslex/cslex.exe
 $(top_builddir)/frontend/CSharpExpressionParser.cs: CSharpExpressionParser.jay $(srcdir)/skeleton
 	$(JAY) -ctv < $(srcdir)/skeleton $< > tmp-p && mv -f tmp-p $(top_builddir)/frontend/CSharpExpressionParser.cs
 
-MAINTAINERCLEANFILES = CSharpExpressionParser.cs y.output
+DISTCLEANFILES = CSharpExpressionParser.cs y.output
 
 EXTRA_DIST = \
 	CL.cs				\
