Add x86_64 files for make dist and change $(libdir) to $(prefix)/lib for mono libs
svn path=/trunk/debugger/; revision=46111

--- a/arch/bfd/include/elf/Makefile.am
+++ b/arch/bfd/include/elf/Makefile.am
@@ -1,1 +1,1 @@
-EXTRA_DIST = common.h dwarf2.h dwarf.h external.h i386.h internal.h reloc-macros.h
+EXTRA_DIST = common.h dwarf2.h dwarf.h external.h i386.h internal.h reloc-macros.h x86-64.h
