2005-06-22  Chris Toshok  <toshok@ximian.com>
	* backends/native/Makefile.am (EXTRA_DIST): add NativeArrayType.cs
	/ NativeArrayObject.cs

	* arch/DwarfReader.cs (DwarfReader.DwarfTag): add the rest of the
	DWARF tags.
	(DwarfReader.DwarfInline): add this enum.
	(DwarfReader+LineNumberEngine.GetSource): change the type of the
	first arg to DieSubprogram.
	(DwarfReader+Die.CreateDie): add support for array_type and
	subrange_type.
	(DwarfReader+DieSubrangeType): new class.
	(DwarfReader+DieArrayType): new class.
	(backends/native/NativeArrayType,
	backends/native/NativeArrayObject): add support for native arrays.


svn path=/trunk/debugger/; revision=46357

--- a/backends/native/Makefile.am
+++ b/backends/native/Makefile.am
@@ -1,4 +1,5 @@
-EXTRA_DIST = NativeFunctionObject.cs NativeFunctionType.cs NativeFundamentalObject.cs NativeFundamentalType.cs \
-	NativeLanguage.cs NativeObject.cs NativeOpaqueObject.cs NativeOpaqueType.cs NativePointerObject.cs \
-	NativePointerType.cs NativeStringObject.cs NativeStringType.cs NativeStructObject.cs NativeStructType.cs \
-	NativeType.cs NativeTypeAlias.cs
+EXTRA_DIST = \
+	NativeArrayObject.cs NativeArrayType.cs NativeFunctionObject.cs NativeFunctionType.cs NativeFundamentalObject.cs \
+	NativeFundamentalType.cs NativeLanguage.cs NativeObject.cs NativeOpaqueObject.cs NativeOpaqueType.cs \
+	NativePointerObject.cs NativePointerType.cs NativeStringObject.cs NativeStringType.cs NativeStructObject.cs \
+	NativeStructType.cs NativeType.cs NativeTypeAlias.cs
