2005-07-05  Chris Toshok  <toshok@ximian.com>
	* frontend/Style.cs (StyleNative.FormatObject): add (obj is
	ITargetEnumType) block, which calls FormatEnumType.
	(StyleNative.FormatEnumMember): new function, give both the
	symbolic and numeric value.
	(StyleNative.FormatType): add TargetObjectKind.Enum case.
	(StyleNative.FormatEnumType): just print "enum <etype.Name>"
	(StyleNative.DoFormatObject): add TargetObjectKind.Enum case.

	* interfaces/TargetObjectKind.cs (enum TargetObjectKind): add
	Enum.

	* interfaces/ITargetEnum{Type,Object}.cs: new interfaces for
	enumerated types/objects.

	* interfaces/Makefile.am (EXTRA_DIST): Add
	ITargetEnum{Type,Object}.cs


svn path=/trunk/debugger/; revision=46977

--- a/interfaces/Makefile.am
+++ b/interfaces/Makefile.am
@@ -1,7 +1,8 @@
-EXTRA_DIST = IArchitecture.cs IDisassembler.cs IEventHandle.cs ILanguage.cs IMethod.cs ISourceBuffer.cs ISymbolFile.cs \
+EXTRA_DIST = \
+	IArchitecture.cs IDisassembler.cs IEventHandle.cs ILanguage.cs IMethod.cs ISourceBuffer.cs ISymbolFile.cs \
 	ISymbolTable.cs ITargetArrayObject.cs ITargetArrayType.cs ITargetClassObject.cs ITargetClassType.cs \
-	ITargetFunctionObject.cs ITargetFunctionType.cs ITargetFundamentalObject.cs ITargetFundamentalType.cs \
-	ITargetMemoryAccess.cs ITargetNotification.cs ITargetObject.cs ITargetPointerObject.cs ITargetPointerType.cs \
-	ITargetStructObject.cs ITargetStructType.cs ITargetType.cs ITargetTypeInfo.cs IVariable.cs TargetObjectKind.cs \
-	ITargetTypeAlias.cs
+	ITargetEnumObject.cs ITargetEnumType.cs ITargetFunctionObject.cs ITargetFunctionType.cs \
+	ITargetFundamentalObject.cs ITargetFundamentalType.cs ITargetMemoryAccess.cs ITargetNotification.cs \
+	ITargetObject.cs ITargetPointerObject.cs ITargetPointerType.cs ITargetStructObject.cs ITargetStructType.cs \
+	ITargetType.cs ITargetTypeInfo.cs IVariable.cs TargetObjectKind.cs ITargetTypeAlias.cs
 
