2005-07-05  Chris Toshok  <toshok@ximian.com>
	* backends/mono/MonoArrayTypeInfo.cs: remove unused using.

	* backends/mono/MonoClassInfo.cs: remove the MonoClassType. prefix
	from MonoFieldInfo, MonoMethodInfo, and MonoPropertyInfo.

	* backends/mono/MonoClassType.cs: split out all the
	Member/Field/Property/Event classes from here.

	* backends/mono/MonoMember.cs: and put them here.  Also,
	MonoStructMember -> MonoMember, and make MonoMember not depend on
	a MonoStructType, since it's also used for enums.

	* backends/mono/MonoSymbolFile.cs: return a MonoEnumType if
	type.IsEnum == true.

	* backends/mono/Makefile.am (EXTRA_DIST): add the new Enum files
	and MonoMember.cs.

	* backends/mono/MonoEnumTypeInfo.cs,
	backends/mono/MonoEnumType.cs, backends/mono/MonoEnumObject.cs:
	add new enum support.


svn path=/trunk/debugger/; revision=46978

--- a/backends/mono/Makefile.am
+++ b/backends/mono/Makefile.am
@@ -1,8 +1,9 @@
 EXTRA_DIST =  \
-	Heap.cs MonoFunctionObject.cs MonoLanguageBackend.cs MonoStringType.cs \
-	MonoArrayObject.cs MonoFunctionType.cs MonoObject.cs MonoStringTypeInfo.cs \
-	MonoArrayType.cs MonoFunctionTypeInfo.cs MonoObjectObject.cs MonoSymbolFile.cs \
-	MonoArrayTypeInfo.cs MonoFundamentalObjectBase.cs MonoObjectType.cs MonoType.cs \
-	MonoClassInfo.cs MonoFundamentalObject.cs MonoObjectTypeInfo.cs MonoTypeInfo.cs \
-	MonoClassObject.cs MonoFundamentalType.cs MonoOpaqueType.cs MonoVariable.cs \
-	MonoClassType.cs MonoFundamentalTypeInfo.cs MonoStringObject.cs
+	Heap.cs MonoArrayObject.cs MonoArrayType.cs MonoArrayTypeInfo.cs MonoClassInfo.cs \
+	MonoClassObject.cs MonoClassType.cs MonoEnumObject.cs MonoEnumType.cs \
+	MonoEnumTypeInfo.cs MonoFunctionObject.cs MonoFunctionType.cs MonoFunctionTypeInfo.cs \
+	MonoFundamentalObjectBase.cs MonoFundamentalObject.cs MonoFundamentalType.cs \
+	MonoFundamentalTypeInfo.cs MonoLanguageBackend.cs MonoMember.cs MonoObject.cs \
+	MonoObjectObject.cs MonoObjectType.cs MonoObjectTypeInfo.cs MonoOpaqueType.cs \
+	MonoStringObject.cs MonoStringType.cs MonoStringTypeInfo.cs MonoSymbolFile.cs \
+	MonoType.cs MonoTypeInfo.cs MonoVariable.cs
