Add the new test here.
svn path=/trunk/debugger/; revision=47427

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,7 +6,7 @@ MCS_FLAGS=-debug
 
 noinst_SCRIPTS = \
 	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll \
-	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe
+	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe TestException.exe
 
 noinst_LTLIBRARIES=libfoo.la
 
@@ -14,7 +14,7 @@ noinst_PROGRAMS = testnativetypes module
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestAssembly.cs TestNamespace.cs TestModule.cs \
-	MultiThread.cs TestInvocation.cs TestInheritance.cs Simple.cs mdb.exp
+	MultiThread.cs TestInvocation.cs TestInheritance.cs Simple.cs TestException.cs mdb.exp
 
 RUNTESTFLAGS = --ignore "MultiThread.exp module.exp start-restart.exp TestModule.exp TestAssembly.exp"
 
