2005-07-22  Martin Baulig  <martin@ximian.com>
	* backends/ThreadManager.cs
	(ThreadManager.start_wait_thread): Reap all children before exiting.
	(ThreadManager.NextProcessID): New internal property.
	(Process.ctor): Set the process ID on a per-thread manager basis,
	so we start counting at 1 after restarting the target.


svn path=/trunk/debugger/; revision=47562

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,7 +6,8 @@ MCS_FLAGS=-debug
 
 noinst_SCRIPTS = \
 	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll \
-	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe TestException.exe
+	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe TestException.exe \
+	TestRestart.exe
 
 noinst_LTLIBRARIES=libfoo.la
 
@@ -14,7 +15,8 @@ noinst_PROGRAMS = testnativetypes module
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestAssembly.cs TestNamespace.cs TestModule.cs \
-	MultiThread.cs TestInvocation.cs TestInheritance.cs Simple.cs TestException.cs mdb.exp
+	MultiThread.cs TestInvocation.cs TestInheritance.cs Simple.cs TestException.cs mdb.exp \
+	TestRestart.cs
 
 RUNTESTFLAGS = --ignore "MultiThread.exp module.exp start-restart.exp TestModule.exp TestAssembly.exp"
 
