2005-07-23  Martin Baulig  <martin@ximian.com>
	* arch/opcodes/Makefile.am (arch_cflags): Add `-DBFD64' on x86_64.


svn path=/trunk/debugger/; revision=47574

--- a/arch/opcodes/Makefile.am
+++ b/arch/opcodes/Makefile.am
@@ -4,8 +4,13 @@ if BFD_TARGET_POWERPC
 arch_cflags = -DARCH_powerpc -DARCH_i386
 arch_sources = i386-dis.c ppc-dis.c ppc-opc.c
 else
+if BFD_TARGET_X86_64
+arch_cflags = -DARCH_i386 -DBFD64
+arch_sources = i386-dis.c
+else
 arch_cflags = -DARCH_i386
 arch_sources = i386-dis.c
+endif
 endif
 
 INCLUDES = -D_GNU_SOURCE $(arch_cflags) -I$(srcdir)/../bfd -I$(srcdir)/../bfd/include
