--- a/configure.in
+++ b/configure.in
@@ -206,7 +206,7 @@ AC_SUBST(LIB_PREFIX)
 AC_SUBST(LIB_SUFFIX)
 
 AC_CHECK_HEADERS(stddef.h string.h strings.h stdlib.h time.h unistd.h)
-AC_CHECK_HEADERS(fcntl.h sys/file.h sys/time.h)
+AC_CHECK_HEADERS(fcntl.h sys/file.h sys/time.h termcap.h termcap/termcap.h)
 AC_HEADER_TIME
 AC_HEADER_DIRENT
 AC_CHECK_FUNCS(fcntl getpagesize setitimer sysconf fdopen getuid getgid)
@@ -227,6 +227,7 @@ backends/ptrace/Makefile
 backends/mono/Makefile
 backends/native/Makefile
 frontend/Makefile
+frontend/libedit/Makefile
 arch/Makefile
 arch/libiberty/Makefile
 arch/opcodes/Makefile
