2005-08-11  Martin Baulig  <martin@ximian.com>
	* classes/ProcessStart.cs (DebuggerOptions.IsRemote): New option.

	* frontend/Main.cs
	(CommandLineInterpreter.ParseOption): Added `-remote' option.

	* frontend/Interpreter.cs
	(Interpreter): Make this a MarshalByRefObject.
	(Interpreter.InterpreterEventSink): New protected class; moved all
	the event handling in here.
	(Interpreter.Initialize): Use `DebuggerClient.CreateConnection ()'
	if `options.IsRemote' is set.

	* frontend/ScriptingContext.cs
	(FrameHandle, BacktraceHandle, ProcessHandle, ScriptingContext):
	Make them MarshalByRefObject's.

	* backends/remoting/: New directory.

	* wrapper/Makefile.am: Create `Mono.Debugger.Remoting.Dll' and
	`mdb-server.exe'.	


svn path=/trunk/debugger/; revision=48270

--- a/configure.in
+++ b/configure.in
@@ -225,6 +225,7 @@ backends/server/Makefile
 backends/ptrace/Makefile
 backends/mono/Makefile
 backends/native/Makefile
+backends/remoting/Makefile
 frontend/Makefile
 frontend/libedit/Makefile
 arch/Makefile
