Set the PATH and LD_LIBRARY_PATH from our prefix.
svn path=/trunk/debugger/; revision=48279

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -133,7 +133,8 @@ mdb: mdb.in Makefile
 	&& mv mdb.tmp mdb 
 
 mdb-server: mdb-server.in Makefile
-	sed -e 's^\@onedir\@^$(onedir)^g' < $(srcdir)/mdb-server.in > mdb-server.tmp \
+	sed -e 's^\@onedir\@^$(onedir)^g' \
+		-e 's^\@prefix\@^$(prefix)^g' < $(srcdir)/mdb-server.in > mdb-server.tmp \
 	&& mv mdb-server.tmp mdb-server
 
 install-data-local:
