--- a/wrapper/mdb-server.in
+++ b/wrapper/mdb-server.in
@@ -5,7 +5,7 @@ HOST=$2
 WRAPPER=$3
 
 if test "x$HOST" != "x" ; then
-    ssh $HOST $WRAPPER "" "" $URL
+    ssh -T $HOST $WRAPPER "" "" $URL
 else
     PATH=@prefix@/bin:$PATH LD_LIBRARY_PATH=@prefix@/lib:$LD_LIBRARY_PATH mono --debug @onedir@/mdb-server.exe $URL
 fi
