2005-08-15  Martin Baulig  <martin@ximian.com>
	* backends/remoting/: Update to support multiple connections and
	also correctly exit when we're done.


svn path=/trunk/debugger/; revision=48396

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -70,10 +70,11 @@ REMOTING_SRCLIST = \
 	$(top_srcdir)/backends/remoting/DebuggerRemotingException.cs		\
 	$(top_srcdir)/backends/remoting/DebuggerConnection.cs			\
 	$(top_srcdir)/backends/remoting/DebuggerStream.cs			\
-	$(top_srcdir)/backends/remoting/DebuggerClient.cs
+	$(top_srcdir)/backends/remoting/DebuggerClient.cs			\
+	$(top_srcdir)/backends/remoting/DebuggerServer.cs
 
 MDB_SERVER_SRCLIST = \
-	$(top_srcdir)/backends/remoting/DebuggerServer.cs
+	$(top_srcdir)/backends/remoting/Server.cs
 
 LIBRARY_DEPS = \
 	-r:Mono.GetOptions	\
