2005-09-23  Martin Baulig  <martin@ximian.com>
	* languages/mono/MonoType.cs: Moved to languages/TargetType.cs.
	(MonoType): Renamed to `TargetType'.

	* languages/mono/MonoObject.cs: Moved to languages/TargetObject.cs.
	(MonoObject): Renamed to `TargetObject'.


svn path=/trunk/debugger/; revision=50614

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -49,8 +49,9 @@ LIBRARY_SRCLIST = \
 	$(top_srcdir)/arch/*.cs				\
 	$(top_srcdir)/backends/*.cs			\
 	$(top_srcdir)/backends/classes/*.cs		\
-	$(top_srcdir)/backends/mono/*.cs		\
-	$(top_srcdir)/backends/native/*.cs		\
+	$(top_srcdir)/languages/*.cs			\
+	$(top_srcdir)/languages/mono/*.cs		\
+	$(top_srcdir)/languages/native/*.cs		\
 	$(top_srcdir)/backends/ptrace/*.cs		\
 	$(top_srcdir)/backends/remoting/*.cs		\
 	$(top_srcdir)/classes/*.cs			\
