--- a/backends/Makefile.am
+++ b/backends/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = classes server ptrace mono native remoting
+SUBDIRS = classes server remoting
 
 EXTRA_DIST = BreakpointManager.cs Debugger.cs ILanguageBackend.cs \
 	Inferior.cs MonoThreadManager.cs Process.cs SingleSteppingEngine.cs StepFrame.cs \
